<resources>
    <string name="app_name">QuailSmartFarm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_new_account">Create New Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="forget_password">Forget password</string>

    <string name="username_on_toolber">Username</string>
    <string name="configs">Configs</string>
    <string name="want_sign_out">Are you sure you want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign out</string>

    <string name="brightness">Brightness</string>
    <string name="temperature">Temperature</string>
    <string name="light">Light</string>
    <string name="fan">Fan</string>

</resources>
