<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.SigninActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding"
        app:layout_constraintEnd_toEndOf="@+id/email_text_input"
        app:layout_constraintStart_toStartOf="@+id/email_text_input"
        app:layout_constraintTop_toBottomOf="@+id/email_text_input">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forget_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text_input"
        android:layout_marginTop="@dimen/margin_padding"
        android:text="@string/forget_password"
        app:layout_constraintEnd_toEndOf="@+id/email_text_input"
        app:layout_constraintTop_toBottomOf="@+id/password_text_input" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_extra_large"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_text_view" />

    <TextView
        android:id="@+id/create_user_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/create_new_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>