<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.SigninActivity">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding"
            android:layout_below="@id/email_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding"
            android:layout_below="@id/password_text_input"
            android:layout_alignParentRight="true"
            android:text="@string/forget_password"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_extra_large"
            android:layout_below="@id/forget_password_text_view"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_in"/>

    </RelativeLayout>

</LinearLayout>